fix sort on iOS, add home icon

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,6 +33,8 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 body {
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-left:0px;
+    padding-left:0px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
